fixed a small layout issue

--- a/client/src/components/uploader/uploader.styles.css
+++ b/client/src/components/uploader/uploader.styles.css
@@ -72,6 +72,9 @@
   .img-source-container {
     width: 100%;
   }
+  .btn-link {
+    padding: 0.7rem 2rem;
+  }
 }
 @media only screen and (max-width: 280px) {
   .uploader {
